added thoughts doc

--- a/CMD RPG/CMD RPG.vcxproj
+++ b/CMD RPG/CMD RPG.vcxproj
@@ -156,6 +156,9 @@
     <ClInclude Include="Item.h" />
     <ClInclude Include="Player.h" />
   </ItemGroup>
+  <ItemGroup>
+    <Text Include="docs\project thoughts.txt" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
