Created loadMonsters function

--- a/CMD RPG/CMD RPG.vcxproj
+++ b/CMD RPG/CMD RPG.vcxproj
@@ -146,6 +146,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Entity.cpp" />
     <ClCompile Include="Game.cpp" />
     <ClCompile Include="Inventory.cpp" />
     <ClCompile Include="Item.cpp" />
@@ -155,6 +156,7 @@
     <ClCompile Include="Weapon.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Entity.h" />
     <ClInclude Include="Game.h" />
     <ClInclude Include="Inventory.h" />
     <ClInclude Include="Item.h" />
@@ -167,6 +169,9 @@
   </ItemGroup>
   <ItemGroup>
     <Text Include="docs\project thoughts.txt" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\monsters.rpg" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
