--- a/CMD RPG/CMD RPG.vcxproj.filters
+++ b/CMD RPG/CMD RPG.vcxproj.filters
@@ -88,5 +88,8 @@
     <None Include="Resources\weapons.rpg">
       <Filter>Resources</Filter>
     </None>
+    <None Include="Execution.md">
+      <Filter>Docs</Filter>
+    </None>
   </ItemGroup>
 </Project>
